오른쪽 화면 작성중( 내프로필과 추천 프로필 하드코딩)(Creating the right screen (hard coding my profile and recommended profile))

--- a/templates/justagram/main.html
+++ b/templates/justagram/main.html
@@ -49,6 +49,7 @@
                 padding-top: 80px;
                 background-color: #FAFAFA;
     ">
+        <!-- left -->
         <div style="min-width : 390px;
                     height : 1000px;
                     margin-right: 500px">
@@ -103,12 +104,107 @@
                 </div>
             </div>
         </div>
-        <div style="width : 400px; height : 1000px; background: orange; position: fixed;left: 60%">
-            오른쪽
+        <!-- right -->
+        <div style="width : 400px; height : 1000px; position: fixed; left: 60%; background-color: yellow">
+            <!-- profile name -->
+            <div class="po right">
+                <div class="po right one" >
+                    <!-- user profile -->
+                    <img src="https://i.namu.wiki/i/bNAlSHiC_HmzCC3BqTPBbYvkhqeo0hBusNtV9YZUJyeX2nZXYSQjMEOyffX-TjncNnb-F_3lQSQEDnuoiUH9cy_5eN7hJdS0JZoPy2NIQHMsLKDCvtXel4KNNorgZT-a5PbArVsuMm7CcKjBvvVTsqeTdPYZcH5VG9rnOYTWync.webp"
+                         class="po right one profile"
+                    />
+                </div>
+                <div style="margin-left: 10px; text-align: left;">
+                    <div style="font-weight: bold;">jusuin5876</div>
+                    <div style="color : grey">JUSUIN</div>
+                </div>
+            </div>
+            <div style="display: flex; flex-direction: row; justify-content: space-between;">
+                <div>
+                    <span style="font-weight: bold; color : gray;">
+                        회원님을 위한 추천
+                    </span>
+                </div>
+                <div>
+                    <a href="#"
+                            style="font-weight: bold;
+                            color : black;
+                            text-decoration: none;">모두보기
+                    </a>
+                </div>
+            </div>
+            <div class="chu right" style="display: flex; flex-direction: row; justify-content: space-between; align-items: center; gap: 5px;">
+                <div class="chu right one" style="display: flex; flex-direction: row;">
+                    <!-- user profile -->
+                    <img src="https://i.namu.wiki/i/bNAlSHiC_HmzCC3BqTPBbYvkhqeo0hBusNtV9YZUJyeX2nZXYSQjMEOyffX-TjncNnb-F_3lQSQEDnuoiUH9cy_5eN7hJdS0JZoPy2NIQHMsLKDCvtXel4KNNorgZT-a5PbArVsuMm7CcKjBvvVTsqeTdPYZcH5VG9rnOYTWync.webp"
+                         class="chu right one profile"
+                    />
+                </div>
+                <div style="margin-left: 5px; text-align: left;">
+                    <div style="font-size : 14px; font-weight: bold;">jusuin5876</div>
+                    <div style="color : grey; font-size : 12px">여기에는 추천 인이 들어가지 1</div>
+                </div>
+                <div style="margin-left: auto; font-size: 14px; font-weight: bold; color: blue; cursor: pointer;">팔로우</div>
+            </div>
+            <div class="chu right" style="display: flex; flex-direction: row; justify-content: space-between; align-items: center; gap: 5px;">
+                <div class="chu right one" style="display: flex; flex-direction: row;">
+                    <!-- user profile -->
+                    <img src="https://i.namu.wiki/i/bNAlSHiC_HmzCC3BqTPBbYvkhqeo0hBusNtV9YZUJyeX2nZXYSQjMEOyffX-TjncNnb-F_3lQSQEDnuoiUH9cy_5eN7hJdS0JZoPy2NIQHMsLKDCvtXel4KNNorgZT-a5PbArVsuMm7CcKjBvvVTsqeTdPYZcH5VG9rnOYTWync.webp"
+                         class="chu right one profile"
+                    />
+                </div>
+                <div style="margin-left: 5px; text-align: left;">
+                    <div style="font-size : 14px; font-weight: bold;">jusuin11111</div>
+                    <div style="color : grey; font-size : 12px">여기에는 추천 인이 들어가지 1</div>
+                </div>
+                <div style="margin-left: auto; font-size: 14px; font-weight: bold; color: blue; cursor: pointer;">팔로우</div>
+            </div>
+             <div class="chu right" style="display: flex; flex-direction: row; justify-content: space-between; align-items: center; gap: 5px;">
+                <div class="chu right one" style="display: flex; flex-direction: row;">
+                    <!-- user profile -->
+                    <img src="https://i.namu.wiki/i/bNAlSHiC_HmzCC3BqTPBbYvkhqeo0hBusNtV9YZUJyeX2nZXYSQjMEOyffX-TjncNnb-F_3lQSQEDnuoiUH9cy_5eN7hJdS0JZoPy2NIQHMsLKDCvtXel4KNNorgZT-a5PbArVsuMm7CcKjBvvVTsqeTdPYZcH5VG9rnOYTWync.webp"
+                         class="chu right one profile"
+                    />
+                </div>
+                <div style="margin-left: 5px; text-align: left;">
+                    <div style="font-size : 14px; font-weight: bold;">jusuin2222</div>
+                    <div style="color : grey; font-size : 12px">여기에는 추천 인이 들어가지 2</div>
+                </div>
+                <div style="margin-left: auto; font-size: 14px; font-weight: bold; color: blue; cursor: pointer;">팔로우</div>
+            </div>
+            <div class="chu right" style="display: flex; flex-direction: row; justify-content: space-between; align-items: center; gap: 5px;">
+                <div class="chu right one" style="display: flex; flex-direction: row;">
+                    <!-- user profile -->
+                    <img src="https://i.namu.wiki/i/bNAlSHiC_HmzCC3BqTPBbYvkhqeo0hBusNtV9YZUJyeX2nZXYSQjMEOyffX-TjncNnb-F_3lQSQEDnuoiUH9cy_5eN7hJdS0JZoPy2NIQHMsLKDCvtXel4KNNorgZT-a5PbArVsuMm7CcKjBvvVTsqeTdPYZcH5VG9rnOYTWync.webp"
+                         class="chu right one profile"
+                    />
+                </div>
+                <div style="margin-left: 5px; text-align: left;">
+                    <div style="font-size : 14px; font-weight: bold;">jusuin33333</div>
+                    <div style="color : grey; font-size : 12px">여기에는 추천 인이 들어가지 3</div>
+                </div>
+                <div style="margin-left: auto; font-size: 14px; font-weight: bold; color: blue; cursor: pointer;">팔로우</div>
+            </div>
+            <div class="chu right" style="display: flex; flex-direction: row; justify-content: space-between; align-items: center; gap: 5px;">
+                <div class="chu right one" style="display: flex; flex-direction: row;">
+                    <!-- user profile -->
+                    <img src="https://i.namu.wiki/i/bNAlSHiC_HmzCC3BqTPBbYvkhqeo0hBusNtV9YZUJyeX2nZXYSQjMEOyffX-TjncNnb-F_3lQSQEDnuoiUH9cy_5eN7hJdS0JZoPy2NIQHMsLKDCvtXel4KNNorgZT-a5PbArVsuMm7CcKjBvvVTsqeTdPYZcH5VG9rnOYTWync.webp"
+                         class="chu right one profile"
+                    />
+                </div>
+                <div style="margin-left: 5px; text-align: left;">
+                    <div style="font-size : 14px; font-weight: bold;">jusuin44444</div>
+                    <div style="color : grey; font-size : 12px">여기에는 추천 인이 들어가지 4</div>
+                </div>
+                <div style="margin-left: auto; font-size: 14px; font-weight: bold; color: blue; cursor: pointer;">팔로우</div>
+            </div>
+            <div>소개 도움말 홍보센터 API</div>
+            <div>2024 인스타그램 프롬 페이스북</div>
         </div>
     </div>
   </body>
 </html>
+
 
 {#<!DOCTYPE html>#}
 {#<html lang="en">#}
