--- a/static/css/main.css
+++ b/static/css/main.css
@@ -18,8 +18,29 @@
   flex-direction: row;
   align-items: center
 }
+.po.right {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.chu.right {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin : 8px;
+}
 
 .feed.left.one {
+  width: 40px;
+  height : 40px;
+  margin : 0px 10px;
+}
+.po.right.one {
+  width: 80px;
+  height : 80px;
+  margin : 0px 10px;
+}
+.chu.right.one {
   width: 40px;
   height : 40px;
   margin : 0px 10px;
@@ -29,4 +50,15 @@
    border-radius: 50%;
    width: 40px;
    object-fit : contain;
+}
+.po.right.one.profile {
+   border-radius: 50%;
+   width: 80px;
+   object-fit : contain;
+}
+.chu.right.one.profile {
+   border-radius: 50%;
+   width: 40px;
+    width: 40px;
+   object-fit : cover;
 }
