나머지 이어서 코딩(Continue coding the rest)

--- a/templates/justagram/main.html
+++ b/templates/justagram/main.html
@@ -53,8 +53,8 @@
         <div style="min-width : 390px;
                     height : 1000px;
                     margin-right: 500px">
-             <!-- feed line -->
-            <div style="width : 500px; height : 500px; border : solid 1px gray; background-color : white;">
+            <!-- feed line 1 -->
+            <div style="margin-top : 50px; width : 500px; height : 500px; border : solid 1px lightgray; background-color : white;">
                 <!-- profile name -->
                 <div class="feed left">
                     <div class="feed left one" >
@@ -103,9 +103,218 @@
                     </div>
                 </div>
             </div>
+            <!-- feed line end 1-->
+
+            <!-- feed line 2 -->
+            <div style="margin-top : 50px; width : 500px; height : 500px; border : solid 1px lightgray; background-color : white;">
+                <!-- profile name -->
+                <div class="feed left">
+                    <div class="feed left one" >
+                        <!-- user profile -->
+                        <img src="https://i.namu.wiki/i/bNAlSHiC_HmzCC3BqTPBbYvkhqeo0hBusNtV9YZUJyeX2nZXYSQjMEOyffX-TjncNnb-F_3lQSQEDnuoiUH9cy_5eN7hJdS0JZoPy2NIQHMsLKDCvtXel4KNNorgZT-a5PbArVsuMm7CcKjBvvVTsqeTdPYZcH5VG9rnOYTWync.webp"
+                             class="feed left one profile"
+                        />
+                    </div>
+                    <div>jusuin5876</div>
+                </div>
+                <!-- img -->
+                <div>
+                    <img style="width: 100%; height : 50%"
+                         src="https://p4.wallpaperbetter.com/wallpaper/91/546/459/photography-1920x1200-fotografias-wallpaper-preview.jpg">
+                </div>
+                <!-- icon set -->
+                <div style="margin : 0px 20px; display: flex; flex-direction: row; justify-content: space-between">
+                    <div>
+                        <span class="material-symbols-outlined">favorite</span>
+                        <span class="material-symbols-outlined">mode_comment</span>
+                        <span class="material-symbols-outlined">send</span>
+                    </div>
+                    <div>
+                        <span class="material-symbols-outlined">bookmark</span>
+                    </div>
+                </div>
+                <!-- name and favorite Text -->
+                <div style="margin : 0px 20px; text-align: left; font-size: 14px;">
+                    춘식이 <b>외 27명</b>이 좋아합니다.
+                </div>
+                <div style="margin : 0px 20px; text-align: left; font-size: 16px;">
+                    <b>jusuin5876</b> 인스타그램 피드 만드는거 테스트 중입니다.
+                </div>
+                <div style="margin : 0px 20px; text-align: left; font-size: 12px;">
+                    <b>jusuin5876_2</b> 인스타그램 피드 댓글 만드는거 테스트 중
+                </div>
+                <div style="display: flex; flex-direction: row; justify-content: space-between">
+                    <div style="width: 90%">
+                        <input class="form-control"
+                               style="outline : none; box-shadow: none; border : none; outline : none;"
+                               type="text"
+                               placeholder="댓글 달기..">
+                    </div>
+                    <div style="width: 10%">
+                        <span class="material-symbols-outlined">sentiment_satisfied</span>
+                    </div>
+                </div>
+            </div>
+            <!-- feed line end 2-->
+
+            <!-- feed line 3 -->
+            <div style="margin-top : 50px; width : 500px; height : 500px; border : solid 1px lightgray; background-color : white;">
+                <!-- profile name -->
+                <div class="feed left">
+                    <div class="feed left one" >
+                        <!-- user profile -->
+                        <img src="https://i.namu.wiki/i/bNAlSHiC_HmzCC3BqTPBbYvkhqeo0hBusNtV9YZUJyeX2nZXYSQjMEOyffX-TjncNnb-F_3lQSQEDnuoiUH9cy_5eN7hJdS0JZoPy2NIQHMsLKDCvtXel4KNNorgZT-a5PbArVsuMm7CcKjBvvVTsqeTdPYZcH5VG9rnOYTWync.webp"
+                             class="feed left one profile"
+                        />
+                    </div>
+                    <div>jusuin5876</div>
+                </div>
+                <!-- img -->
+                <div>
+                    <img style="width: 100%; height : 50%"
+                         src="https://p4.wallpaperbetter.com/wallpaper/91/546/459/photography-1920x1200-fotografias-wallpaper-preview.jpg">
+                </div>
+                <!-- icon set -->
+                <div style="margin : 0px 20px; display: flex; flex-direction: row; justify-content: space-between">
+                    <div>
+                        <span class="material-symbols-outlined">favorite</span>
+                        <span class="material-symbols-outlined">mode_comment</span>
+                        <span class="material-symbols-outlined">send</span>
+                    </div>
+                    <div>
+                        <span class="material-symbols-outlined">bookmark</span>
+                    </div>
+                </div>
+                <!-- name and favorite Text -->
+                <div style="margin : 0px 20px; text-align: left; font-size: 14px;">
+                    춘식이 <b>외 27명</b>이 좋아합니다.
+                </div>
+                <div style="margin : 0px 20px; text-align: left; font-size: 16px;">
+                    <b>jusuin5876</b> 인스타그램 피드 만드는거 테스트 중입니다.
+                </div>
+                <div style="margin : 0px 20px; text-align: left; font-size: 12px;">
+                    <b>jusuin5876_2</b> 인스타그램 피드 댓글 만드는거 테스트 중
+                </div>
+                <div style="display: flex; flex-direction: row; justify-content: space-between">
+                    <div style="width: 90%">
+                        <input class="form-control"
+                               style="outline : none; box-shadow: none; border : none; outline : none;"
+                               type="text"
+                               placeholder="댓글 달기..">
+                    </div>
+                    <div style="width: 10%">
+                        <span class="material-symbols-outlined">sentiment_satisfied</span>
+                    </div>
+                </div>
+            </div>
+            <!-- feed line end 3-->
+
+            <!-- feed line 4 -->
+            <div style="margin-top : 50px; width : 500px; height : 500px; border : solid 1px lightgray; background-color : white;">
+                <!-- profile name -->
+                <div class="feed left">
+                    <div class="feed left one" >
+                        <!-- user profile -->
+                        <img src="https://i.namu.wiki/i/bNAlSHiC_HmzCC3BqTPBbYvkhqeo0hBusNtV9YZUJyeX2nZXYSQjMEOyffX-TjncNnb-F_3lQSQEDnuoiUH9cy_5eN7hJdS0JZoPy2NIQHMsLKDCvtXel4KNNorgZT-a5PbArVsuMm7CcKjBvvVTsqeTdPYZcH5VG9rnOYTWync.webp"
+                             class="feed left one profile"
+                        />
+                    </div>
+                    <div>jusuin5876</div>
+                </div>
+                <!-- img -->
+                <div>
+                    <img style="width: 100%; height : 50%"
+                         src="https://p4.wallpaperbetter.com/wallpaper/91/546/459/photography-1920x1200-fotografias-wallpaper-preview.jpg">
+                </div>
+                <!-- icon set -->
+                <div style="margin : 0px 20px; display: flex; flex-direction: row; justify-content: space-between">
+                    <div>
+                        <span class="material-symbols-outlined">favorite</span>
+                        <span class="material-symbols-outlined">mode_comment</span>
+                        <span class="material-symbols-outlined">send</span>
+                    </div>
+                    <div>
+                        <span class="material-symbols-outlined">bookmark</span>
+                    </div>
+                </div>
+                <!-- name and favorite Text -->
+                <div style="margin : 0px 20px; text-align: left; font-size: 14px;">
+                    춘식이 <b>외 27명</b>이 좋아합니다.
+                </div>
+                <div style="margin : 0px 20px; text-align: left; font-size: 16px;">
+                    <b>jusuin5876</b> 인스타그램 피드 만드는거 테스트 중입니다.
+                </div>
+                <div style="margin : 0px 20px; text-align: left; font-size: 12px;">
+                    <b>jusuin5876_2</b> 인스타그램 피드 댓글 만드는거 테스트 중
+                </div>
+                <div style="display: flex; flex-direction: row; justify-content: space-between">
+                    <div style="width: 90%">
+                        <input class="form-control"
+                               style="outline : none; box-shadow: none; border : none; outline : none;"
+                               type="text"
+                               placeholder="댓글 달기..">
+                    </div>
+                    <div style="width: 10%">
+                        <span class="material-symbols-outlined">sentiment_satisfied</span>
+                    </div>
+                </div>
+            </div>
+            <!-- feed line end 4-->
+
+            <!-- feed line 5 -->
+            <div style="margin-top : 50px; width : 500px; height : 500px; border : solid 1px lightgray; background-color : white;">
+                <!-- profile name -->
+                <div class="feed left">
+                    <div class="feed left one" >
+                        <!-- user profile -->
+                        <img src="https://i.namu.wiki/i/bNAlSHiC_HmzCC3BqTPBbYvkhqeo0hBusNtV9YZUJyeX2nZXYSQjMEOyffX-TjncNnb-F_3lQSQEDnuoiUH9cy_5eN7hJdS0JZoPy2NIQHMsLKDCvtXel4KNNorgZT-a5PbArVsuMm7CcKjBvvVTsqeTdPYZcH5VG9rnOYTWync.webp"
+                             class="feed left one profile"
+                        />
+                    </div>
+                    <div>jusuin5876</div>
+                </div>
+                <!-- img -->
+                <div>
+                    <img style="width: 100%; height : 50%"
+                         src="https://p4.wallpaperbetter.com/wallpaper/91/546/459/photography-1920x1200-fotografias-wallpaper-preview.jpg">
+                </div>
+                <!-- icon set -->
+                <div style="margin : 0px 20px; display: flex; flex-direction: row; justify-content: space-between">
+                    <div>
+                        <span class="material-symbols-outlined">favorite</span>
+                        <span class="material-symbols-outlined">mode_comment</span>
+                        <span class="material-symbols-outlined">send</span>
+                    </div>
+                    <div>
+                        <span class="material-symbols-outlined">bookmark</span>
+                    </div>
+                </div>
+                <!-- name and favorite Text -->
+                <div style="margin : 0px 20px; text-align: left; font-size: 14px;">
+                    춘식이 <b>외 27명</b>이 좋아합니다.
+                </div>
+                <div style="margin : 0px 20px; text-align: left; font-size: 16px;">
+                    <b>jusuin5876</b> 인스타그램 피드 만드는거 테스트 중입니다.
+                </div>
+                <div style="margin : 0px 20px; text-align: left; font-size: 12px;">
+                    <b>jusuin5876_2</b> 인스타그램 피드 댓글 만드는거 테스트 중
+                </div>
+                <div style="display: flex; flex-direction: row; justify-content: space-between">
+                    <div style="width: 90%">
+                        <input class="form-control"
+                               style="outline : none; box-shadow: none; border : none; outline : none;"
+                               type="text"
+                               placeholder="댓글 달기..">
+                    </div>
+                    <div style="width: 10%">
+                        <span class="material-symbols-outlined">sentiment_satisfied</span>
+                    </div>
+                </div>
+            </div>
+            <!-- feed line end 5-->
         </div>
-        <!-- right -->
-        <div style="width : 400px; height : 1000px; position: fixed; left: 60%; background-color: yellow">
+        <!-- right  -->
+        <div style="width : 400px; height : 1000px; position: fixed; left: 60%; ">
             <!-- profile name -->
             <div class="po right">
                 <div class="po right one" >
@@ -121,7 +330,7 @@
             </div>
             <div style="display: flex; flex-direction: row; justify-content: space-between;">
                 <div>
-                    <span style="font-weight: bold; color : gray;">
+                    <span style="margin : 10px 10px; font-weight: bold; color : gray;">
                         회원님을 위한 추천
                     </span>
                 </div>
@@ -198,8 +407,13 @@
                 </div>
                 <div style="margin-left: auto; font-size: 14px; font-weight: bold; color: blue; cursor: pointer;">팔로우</div>
             </div>
-            <div>소개 도움말 홍보센터 API</div>
-            <div>2024 인스타그램 프롬 페이스북</div>
+            <div style="margin-left : 5px; margin-top: 50px; font-size:12px; color:gray; text-align: left;">
+                소개 도움말 홍보센터 API<br>
+                개인정보처리방침 약관 위치 인기 계정 해시태그 언어<br>
+            </div>
+            <div style="margin-left : 5px; margin-top:20px; font-size:12px; color:gray; text-align: left;">
+                2024 인스타그램 프롬 페이스북
+            </div>
         </div>
     </div>
   </body>
