--- a/templates/justagram/main.html
+++ b/templates/justagram/main.html
@@ -12,6 +12,12 @@
       <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
   </head>
   <body>
+{#    <div>#}
+{#        {% for feed in feeds %}#}
+{#            <p> {{ feed.content }}</p>#}
+{#            <p> {{ feed.user_id }}</p>#}
+{#        {% endfor %}   #}
+{#    </div>#}
     <nav class="navbar navbar-expand-lg bg-body-tertiary" style="display: flex; justify-content: space-between; align-items: center; flex-wrap: nowrap; position: fixed; width: 100%;">
        <div class="container-fluid" style="display: flex; justify-content: space-between; align-items: center;">
         <a class="navbar-brand" href="#">
@@ -53,265 +59,58 @@
         <div style="min-width : 390px;
                     height : 1000px;
                     margin-right: 500px">
-            <!-- feed line 1 -->
-            <div style="margin-top : 50px; width : 500px; height : 500px; border : solid 1px lightgray; background-color : white;">
-                <!-- profile name -->
-                <div class="feed left">
-                    <div class="feed left one" >
-                        <!-- user profile -->
-                        <img src="https://i.namu.wiki/i/bNAlSHiC_HmzCC3BqTPBbYvkhqeo0hBusNtV9YZUJyeX2nZXYSQjMEOyffX-TjncNnb-F_3lQSQEDnuoiUH9cy_5eN7hJdS0JZoPy2NIQHMsLKDCvtXel4KNNorgZT-a5PbArVsuMm7CcKjBvvVTsqeTdPYZcH5VG9rnOYTWync.webp"
-                             class="feed left one profile"
-                        />
+            <!-- here feed box start -->
+            {% for feed in feeds %}
+                <div style="margin-top : 50px; width : 500px; height : 500px; border : solid 1px lightgray; background-color : white;">
+                    <!-- profile name -->
+                    <div class="feed left">
+                        <div class="feed left one" >
+                            <!-- user profile -->
+                            <img src="{{ feed.profile_image }}"
+                                 class="feed left one profile"
+                            />
+                        </div>
+                        <div>{{ feed.user_id }}</div>
                     </div>
-                    <div>jusuin5876</div>
-                </div>
-                <!-- img -->
-                <div>
-                    <img style="width: 100%; height : 50%"
-                         src="https://p4.wallpaperbetter.com/wallpaper/91/546/459/photography-1920x1200-fotografias-wallpaper-preview.jpg">
-                </div>
-                <!-- icon set -->
-                <div style="margin : 0px 20px; display: flex; flex-direction: row; justify-content: space-between">
+                    <!-- img -->
                     <div>
-                        <span class="material-symbols-outlined">favorite</span>
-                        <span class="material-symbols-outlined">mode_comment</span>
-                        <span class="material-symbols-outlined">send</span>
+                        <img style="width: 100%; height : 320px" src="{{ feed.image }}">
                     </div>
-                    <div>
-                        <span class="material-symbols-outlined">bookmark</span>
+                    <!-- icon set -->
+                    <div style="margin : 0px 20px; display: flex; flex-direction: row; justify-content: space-between">
+                        <div>
+                            <span class="material-symbols-outlined">favorite</span>
+                            <span class="material-symbols-outlined">mode_comment</span>
+                            <span class="material-symbols-outlined">send</span>
+                        </div>
+                        <div>
+                            <span class="material-symbols-outlined">bookmark</span>
+                        </div>
                     </div>
-                </div>
-                <!-- name and favorite Text -->
-                <div style="margin : 0px 20px; text-align: left; font-size: 14px;">
-                    춘식이 <b>외 27명</b>이 좋아합니다.
-                </div>
-                <div style="margin : 0px 20px; text-align: left; font-size: 16px;">
-                    <b>jusuin5876</b> 인스타그램 피드 만드는거 테스트 중입니다.
-                </div>
-                <div style="margin : 0px 20px; text-align: left; font-size: 12px;">
-                    <b>jusuin5876_2</b> 인스타그램 피드 댓글 만드는거 테스트 중
-                </div>
-                <div style="display: flex; flex-direction: row; justify-content: space-between">
-                    <div style="width: 90%">
-                        <input class="form-control"
-                               style="outline : none; box-shadow: none; border : none; outline : none;"
-                               type="text"
-                               placeholder="댓글 달기..">
+                    <!-- name and favorite Text -->
+                    <div style="margin : 0px 20px; text-align: left; font-size: 14px;">
+                        춘식이 <b>외 {{ feed.like_count }} 명</b>이 좋아합니다.
                     </div>
-                    <div style="width: 10%">
-                        <span class="material-symbols-outlined">sentiment_satisfied</span>
+                    <div style="margin : 0px 20px; text-align: left; font-size: 16px;">
+                        <b>{{ feed.user_id }}</b> {{ feed.content }}
                     </div>
-                </div>
-            </div>
-            <!-- feed line end 1-->
-
-            <!-- feed line 2 -->
-            <div style="margin-top : 50px; width : 500px; height : 500px; border : solid 1px lightgray; background-color : white;">
-                <!-- profile name -->
-                <div class="feed left">
-                    <div class="feed left one" >
-                        <!-- user profile -->
-                        <img src="https://i.namu.wiki/i/bNAlSHiC_HmzCC3BqTPBbYvkhqeo0hBusNtV9YZUJyeX2nZXYSQjMEOyffX-TjncNnb-F_3lQSQEDnuoiUH9cy_5eN7hJdS0JZoPy2NIQHMsLKDCvtXel4KNNorgZT-a5PbArVsuMm7CcKjBvvVTsqeTdPYZcH5VG9rnOYTWync.webp"
-                             class="feed left one profile"
-                        />
+                    <div style="margin : 0px 20px; text-align: left; font-size: 12px;">
+                        <b>jusuin5876_2</b> 인스타그램 피드 댓글 만드는거 테스트 중
                     </div>
-                    <div>jusuin5876</div>
-                </div>
-                <!-- img -->
-                <div>
-                    <img style="width: 100%; height : 50%"
-                         src="https://p4.wallpaperbetter.com/wallpaper/91/546/459/photography-1920x1200-fotografias-wallpaper-preview.jpg">
-                </div>
-                <!-- icon set -->
-                <div style="margin : 0px 20px; display: flex; flex-direction: row; justify-content: space-between">
-                    <div>
-                        <span class="material-symbols-outlined">favorite</span>
-                        <span class="material-symbols-outlined">mode_comment</span>
-                        <span class="material-symbols-outlined">send</span>
-                    </div>
-                    <div>
-                        <span class="material-symbols-outlined">bookmark</span>
+                    <div style="display: flex; flex-direction: row; justify-content: space-between">
+                        <div style="width: 90%">
+                            <input class="form-control"
+                                   style="outline : none; box-shadow: none; border : none; outline : none;"
+                                   type="text"
+                                   placeholder="댓글 달기..">
+                        </div>
+                        <div style="width: 10%">
+                            <span class="material-symbols-outlined">sentiment_satisfied</span>
+                        </div>
                     </div>
                 </div>
-                <!-- name and favorite Text -->
-                <div style="margin : 0px 20px; text-align: left; font-size: 14px;">
-                    춘식이 <b>외 27명</b>이 좋아합니다.
-                </div>
-                <div style="margin : 0px 20px; text-align: left; font-size: 16px;">
-                    <b>jusuin5876</b> 인스타그램 피드 만드는거 테스트 중입니다.
-                </div>
-                <div style="margin : 0px 20px; text-align: left; font-size: 12px;">
-                    <b>jusuin5876_2</b> 인스타그램 피드 댓글 만드는거 테스트 중
-                </div>
-                <div style="display: flex; flex-direction: row; justify-content: space-between">
-                    <div style="width: 90%">
-                        <input class="form-control"
-                               style="outline : none; box-shadow: none; border : none; outline : none;"
-                               type="text"
-                               placeholder="댓글 달기..">
-                    </div>
-                    <div style="width: 10%">
-                        <span class="material-symbols-outlined">sentiment_satisfied</span>
-                    </div>
-                </div>
-            </div>
-            <!-- feed line end 2-->
-
-            <!-- feed line 3 -->
-            <div style="margin-top : 50px; width : 500px; height : 500px; border : solid 1px lightgray; background-color : white;">
-                <!-- profile name -->
-                <div class="feed left">
-                    <div class="feed left one" >
-                        <!-- user profile -->
-                        <img src="https://i.namu.wiki/i/bNAlSHiC_HmzCC3BqTPBbYvkhqeo0hBusNtV9YZUJyeX2nZXYSQjMEOyffX-TjncNnb-F_3lQSQEDnuoiUH9cy_5eN7hJdS0JZoPy2NIQHMsLKDCvtXel4KNNorgZT-a5PbArVsuMm7CcKjBvvVTsqeTdPYZcH5VG9rnOYTWync.webp"
-                             class="feed left one profile"
-                        />
-                    </div>
-                    <div>jusuin5876</div>
-                </div>
-                <!-- img -->
-                <div>
-                    <img style="width: 100%; height : 50%"
-                         src="https://p4.wallpaperbetter.com/wallpaper/91/546/459/photography-1920x1200-fotografias-wallpaper-preview.jpg">
-                </div>
-                <!-- icon set -->
-                <div style="margin : 0px 20px; display: flex; flex-direction: row; justify-content: space-between">
-                    <div>
-                        <span class="material-symbols-outlined">favorite</span>
-                        <span class="material-symbols-outlined">mode_comment</span>
-                        <span class="material-symbols-outlined">send</span>
-                    </div>
-                    <div>
-                        <span class="material-symbols-outlined">bookmark</span>
-                    </div>
-                </div>
-                <!-- name and favorite Text -->
-                <div style="margin : 0px 20px; text-align: left; font-size: 14px;">
-                    춘식이 <b>외 27명</b>이 좋아합니다.
-                </div>
-                <div style="margin : 0px 20px; text-align: left; font-size: 16px;">
-                    <b>jusuin5876</b> 인스타그램 피드 만드는거 테스트 중입니다.
-                </div>
-                <div style="margin : 0px 20px; text-align: left; font-size: 12px;">
-                    <b>jusuin5876_2</b> 인스타그램 피드 댓글 만드는거 테스트 중
-                </div>
-                <div style="display: flex; flex-direction: row; justify-content: space-between">
-                    <div style="width: 90%">
-                        <input class="form-control"
-                               style="outline : none; box-shadow: none; border : none; outline : none;"
-                               type="text"
-                               placeholder="댓글 달기..">
-                    </div>
-                    <div style="width: 10%">
-                        <span class="material-symbols-outlined">sentiment_satisfied</span>
-                    </div>
-                </div>
-            </div>
-            <!-- feed line end 3-->
-
-            <!-- feed line 4 -->
-            <div style="margin-top : 50px; width : 500px; height : 500px; border : solid 1px lightgray; background-color : white;">
-                <!-- profile name -->
-                <div class="feed left">
-                    <div class="feed left one" >
-                        <!-- user profile -->
-                        <img src="https://i.namu.wiki/i/bNAlSHiC_HmzCC3BqTPBbYvkhqeo0hBusNtV9YZUJyeX2nZXYSQjMEOyffX-TjncNnb-F_3lQSQEDnuoiUH9cy_5eN7hJdS0JZoPy2NIQHMsLKDCvtXel4KNNorgZT-a5PbArVsuMm7CcKjBvvVTsqeTdPYZcH5VG9rnOYTWync.webp"
-                             class="feed left one profile"
-                        />
-                    </div>
-                    <div>jusuin5876</div>
-                </div>
-                <!-- img -->
-                <div>
-                    <img style="width: 100%; height : 50%"
-                         src="https://p4.wallpaperbetter.com/wallpaper/91/546/459/photography-1920x1200-fotografias-wallpaper-preview.jpg">
-                </div>
-                <!-- icon set -->
-                <div style="margin : 0px 20px; display: flex; flex-direction: row; justify-content: space-between">
-                    <div>
-                        <span class="material-symbols-outlined">favorite</span>
-                        <span class="material-symbols-outlined">mode_comment</span>
-                        <span class="material-symbols-outlined">send</span>
-                    </div>
-                    <div>
-                        <span class="material-symbols-outlined">bookmark</span>
-                    </div>
-                </div>
-                <!-- name and favorite Text -->
-                <div style="margin : 0px 20px; text-align: left; font-size: 14px;">
-                    춘식이 <b>외 27명</b>이 좋아합니다.
-                </div>
-                <div style="margin : 0px 20px; text-align: left; font-size: 16px;">
-                    <b>jusuin5876</b> 인스타그램 피드 만드는거 테스트 중입니다.
-                </div>
-                <div style="margin : 0px 20px; text-align: left; font-size: 12px;">
-                    <b>jusuin5876_2</b> 인스타그램 피드 댓글 만드는거 테스트 중
-                </div>
-                <div style="display: flex; flex-direction: row; justify-content: space-between">
-                    <div style="width: 90%">
-                        <input class="form-control"
-                               style="outline : none; box-shadow: none; border : none; outline : none;"
-                               type="text"
-                               placeholder="댓글 달기..">
-                    </div>
-                    <div style="width: 10%">
-                        <span class="material-symbols-outlined">sentiment_satisfied</span>
-                    </div>
-                </div>
-            </div>
-            <!-- feed line end 4-->
-
-            <!-- feed line 5 -->
-            <div style="margin-top : 50px; width : 500px; height : 500px; border : solid 1px lightgray; background-color : white;">
-                <!-- profile name -->
-                <div class="feed left">
-                    <div class="feed left one" >
-                        <!-- user profile -->
-                        <img src="https://i.namu.wiki/i/bNAlSHiC_HmzCC3BqTPBbYvkhqeo0hBusNtV9YZUJyeX2nZXYSQjMEOyffX-TjncNnb-F_3lQSQEDnuoiUH9cy_5eN7hJdS0JZoPy2NIQHMsLKDCvtXel4KNNorgZT-a5PbArVsuMm7CcKjBvvVTsqeTdPYZcH5VG9rnOYTWync.webp"
-                             class="feed left one profile"
-                        />
-                    </div>
-                    <div>jusuin5876</div>
-                </div>
-                <!-- img -->
-                <div>
-                    <img style="width: 100%; height : 50%"
-                         src="https://p4.wallpaperbetter.com/wallpaper/91/546/459/photography-1920x1200-fotografias-wallpaper-preview.jpg">
-                </div>
-                <!-- icon set -->
-                <div style="margin : 0px 20px; display: flex; flex-direction: row; justify-content: space-between">
-                    <div>
-                        <span class="material-symbols-outlined">favorite</span>
-                        <span class="material-symbols-outlined">mode_comment</span>
-                        <span class="material-symbols-outlined">send</span>
-                    </div>
-                    <div>
-                        <span class="material-symbols-outlined">bookmark</span>
-                    </div>
-                </div>
-                <!-- name and favorite Text -->
-                <div style="margin : 0px 20px; text-align: left; font-size: 14px;">
-                    춘식이 <b>외 27명</b>이 좋아합니다.
-                </div>
-                <div style="margin : 0px 20px; text-align: left; font-size: 16px;">
-                    <b>jusuin5876</b> 인스타그램 피드 만드는거 테스트 중입니다.
-                </div>
-                <div style="margin : 0px 20px; text-align: left; font-size: 12px;">
-                    <b>jusuin5876_2</b> 인스타그램 피드 댓글 만드는거 테스트 중
-                </div>
-                <div style="display: flex; flex-direction: row; justify-content: space-between">
-                    <div style="width: 90%">
-                        <input class="form-control"
-                               style="outline : none; box-shadow: none; border : none; outline : none;"
-                               type="text"
-                               placeholder="댓글 달기..">
-                    </div>
-                    <div style="width: 10%">
-                        <span class="material-symbols-outlined">sentiment_satisfied</span>
-                    </div>
-                </div>
-            </div>
-            <!-- feed line end 5-->
+            {% endfor %}
+            <!-- here feed box end -->
         </div>
         <!-- right  -->
         <div style="width : 400px; height : 1000px; position: fixed; left: 60%; ">
