--- a/static/css/main.css
+++ b/static/css/main.css
@@ -46,8 +46,6 @@
   margin : 0px 10px;
 }
 
-
-
 .feed.left.one.profile {
    border-radius: 50%;
    width: 40px;
@@ -65,3 +63,31 @@
    object-fit : cover;
 }
 
+/* ********* modal make *********  */
+.modal_overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: none; /*flex none */
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0, 0, 0, 0.8);
+    backdrop-filter: blur(1.5px);
+    -webkit-backdrop-filter: blur(1.5px);
+}
+
+.modal_window {
+    background: white;
+    backdrop-filter: blur(13.5px);
+    -webkit-backdrop-filter: blur(13.5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    width: 800px;
+    height: 600px;
+    position: relative;
+    padding: 10px;
+}
+/* ************************* */
