--- a/templates/justagram/main.html
+++ b/templates/justagram/main.html
@@ -10,6 +10,8 @@
       <!--  google meteriai icon css-->
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
       <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+      <!-- jquery -->
+      <script src="https://code.jquery.com/jquery-latest.min.js"></script>
   </head>
   <body>
 {#    <div>#}
@@ -42,7 +44,7 @@
         <div style="display: flex; gap: 15px;">
           <span class="material-symbols-outlined fill">home</span>
           <span class="material-symbols-outlined">send</span>
-          <span class="material-symbols-outlined">add_box</span>
+          <span id="nav_bar_add_box" class="material-symbols-outlined">add_box</span>
           <span class="material-symbols-outlined">explore</span>
           <span class="material-symbols-outlined">favorite</span>
         </div>
@@ -215,6 +217,29 @@
             </div>
         </div>
     </div>
+    <!-- modal 창 make -->
+    <div class="modal_overlay">
+        <div class="modal_window">
+
+        </div>
+    </div>
+   <!-- javascript jquery -->
+  <script>
+      
+      $('#nav_bar_add_box').click(function(){
+          {# modal #}
+          $('.modal_overlay').css({
+              display : "flex",
+          });
+          {#scroll bar x#}
+          $('document.body').css({
+              overflow : "hidden"
+          });
+          
+          
+          {#alert("add box");#}
+      })
+  </script>
   </body>
 </html>
 
