--- a/static/css/main.css
+++ b/static/css/main.css
@@ -86,8 +86,24 @@
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.18);
     width: 800px;
-    height: 600px;
+    height: 580px;
     position: relative;
     padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
+
+.modal_title{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        font-weight: bold;
+        font-size: 20px;
+}
+.modal_title_side{
+    flex: 0 0 40px;
+    text-align: center;
+}
+
 /* ************************* */
