--- a/templates/justagram/main.html
+++ b/templates/justagram/main.html
@@ -76,7 +76,7 @@
                     </div>
                     <!-- img -->
                     <div>
-                        <img style="width: 100%; height : 320px" src="{{ feed.image }}">
+                        <img style="width: 100%; height : 320px" src="{% get_media_prefix %}{{ feed.image }}"/>
                     </div>
                     <!-- icon set -->
                     <div style="margin : 0px 20px; display: flex; flex-direction: row; justify-content: space-between">
@@ -120,7 +120,7 @@
             <div class="po right">
                 <div class="po right one" >
                     <!-- user profile -->
-                    <img src="https://i.namu.wiki/i/bNAlSHiC_HmzCC3BqTPBbYvkhqeo0hBusNtV9YZUJyeX2nZXYSQjMEOyffX-TjncNnb-F_3lQSQEDnuoiUH9cy_5eN7hJdS0JZoPy2NIQHMsLKDCvtXel4KNNorgZT-a5PbArVsuMm7CcKjBvvVTsqeTdPYZcH5VG9rnOYTWync.webp"
+                    <img src="https://pimg.mk.co.kr/meet/neds/2016/07/image_readtop_2016_509303_14685745662548570.jpeg"
                          class="po right one profile"
                     />
                 </div>
@@ -146,7 +146,7 @@
             <div class="chu right" style="display: flex; flex-direction: row; justify-content: space-between; align-items: center; gap: 5px;">
                 <div class="chu right one" style="display: flex; flex-direction: row;">
                     <!-- user profile -->
-                    <img src="https://i.namu.wiki/i/bNAlSHiC_HmzCC3BqTPBbYvkhqeo0hBusNtV9YZUJyeX2nZXYSQjMEOyffX-TjncNnb-F_3lQSQEDnuoiUH9cy_5eN7hJdS0JZoPy2NIQHMsLKDCvtXel4KNNorgZT-a5PbArVsuMm7CcKjBvvVTsqeTdPYZcH5VG9rnOYTWync.webp"
+                    <img src="https://pimg.mk.co.kr/meet/neds/2016/07/image_readtop_2016_509303_14685745662548570.jpeg"
                          class="chu right one profile"
                     />
                 </div>
@@ -159,7 +159,7 @@
             <div class="chu right" style="display: flex; flex-direction: row; justify-content: space-between; align-items: center; gap: 5px;">
                 <div class="chu right one" style="display: flex; flex-direction: row;">
                     <!-- user profile -->
-                    <img src="https://i.namu.wiki/i/bNAlSHiC_HmzCC3BqTPBbYvkhqeo0hBusNtV9YZUJyeX2nZXYSQjMEOyffX-TjncNnb-F_3lQSQEDnuoiUH9cy_5eN7hJdS0JZoPy2NIQHMsLKDCvtXel4KNNorgZT-a5PbArVsuMm7CcKjBvvVTsqeTdPYZcH5VG9rnOYTWync.webp"
+                    <img src="https://pimg.mk.co.kr/meet/neds/2016/07/image_readtop_2016_509303_14685745662548570.jpeg"
                          class="chu right one profile"
                     />
                 </div>
@@ -172,7 +172,7 @@
              <div class="chu right" style="display: flex; flex-direction: row; justify-content: space-between; align-items: center; gap: 5px;">
                 <div class="chu right one" style="display: flex; flex-direction: row;">
                     <!-- user profile -->
-                    <img src="https://i.namu.wiki/i/bNAlSHiC_HmzCC3BqTPBbYvkhqeo0hBusNtV9YZUJyeX2nZXYSQjMEOyffX-TjncNnb-F_3lQSQEDnuoiUH9cy_5eN7hJdS0JZoPy2NIQHMsLKDCvtXel4KNNorgZT-a5PbArVsuMm7CcKjBvvVTsqeTdPYZcH5VG9rnOYTWync.webp"
+                    <img src="https://pimg.mk.co.kr/meet/neds/2016/07/image_readtop_2016_509303_14685745662548570.jpeg"
                          class="chu right one profile"
                     />
                 </div>
@@ -185,7 +185,7 @@
             <div class="chu right" style="display: flex; flex-direction: row; justify-content: space-between; align-items: center; gap: 5px;">
                 <div class="chu right one" style="display: flex; flex-direction: row;">
                     <!-- user profile -->
-                    <img src="https://i.namu.wiki/i/bNAlSHiC_HmzCC3BqTPBbYvkhqeo0hBusNtV9YZUJyeX2nZXYSQjMEOyffX-TjncNnb-F_3lQSQEDnuoiUH9cy_5eN7hJdS0JZoPy2NIQHMsLKDCvtXel4KNNorgZT-a5PbArVsuMm7CcKjBvvVTsqeTdPYZcH5VG9rnOYTWync.webp"
+                    <img src="https://pimg.mk.co.kr/meet/neds/2016/07/image_readtop_2016_509303_14685745662548570.jpeg"
                          class="chu right one profile"
                     />
                 </div>
@@ -198,7 +198,7 @@
             <div class="chu right" style="display: flex; flex-direction: row; justify-content: space-between; align-items: center; gap: 5px;">
                 <div class="chu right one" style="display: flex; flex-direction: row;">
                     <!-- user profile -->
-                    <img src="https://i.namu.wiki/i/bNAlSHiC_HmzCC3BqTPBbYvkhqeo0hBusNtV9YZUJyeX2nZXYSQjMEOyffX-TjncNnb-F_3lQSQEDnuoiUH9cy_5eN7hJdS0JZoPy2NIQHMsLKDCvtXel4KNNorgZT-a5PbArVsuMm7CcKjBvvVTsqeTdPYZcH5VG9rnOYTWync.webp"
+                    <img src="https://pimg.mk.co.kr/meet/neds/2016/07/image_readtop_2016_509303_14685745662548570.jpeg"
                          class="chu right one profile"
                     />
                 </div>
@@ -217,26 +217,196 @@
             </div>
         </div>
     </div>
-    <!-- modal 창 make -->
-    <div class="modal_overlay">
-        <div class="modal_window">
 
+
+    <!-- modal 창 make -->
+    <!-- first modal -->
+    <div id="first_modal" class="modal_overlay">
+        <div class="modal_window">
+            <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
+                <!-- left empty space -->
+                <div style="width: 40px;">
+                    &nbsp;
+                </div>
+                <!-- center text -->
+                <div style="text-align: center; flex-grow: 1; font-weight: bold;">
+                    새 이미지 업로드
+                </div>
+                <!-- right close -->
+                <div style="width: 40px; height: 40px; background: gray; display: flex; justify-content: center; align-items: center; cursor: pointer;">
+                    <span id="first_modal_close" class="material-symbols-outlined" style="font-size: 20px;">close</span>
+                </div>
+            </div>
+            <div class="img_upload_space" style="border-top : solid 1px gray; width: 775px; height: 540px; margin-top: 10px;">
+            </div>
         </div>
     </div>
-   <!-- javascript jquery -->
+
+    <!-- two modal -->
+    <div id="second_modal" class="modal_overlay">
+        <div class="modal_window">
+            <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
+                <!-- left empty space -->
+                <div style="width: 40px;">
+                    &nbsp;
+                </div>
+                <!-- center text -->
+                <div style="text-align: center; flex-grow: 1; font-weight: bold;">
+                    새 이미지 업로드
+                </div>
+                <!-- right close -->
+                <div style="width: 40px; height: 40px; background: gray; display: flex; justify-content: center; align-items: center; cursor: pointer;">
+                    <span id="second_modal_close" class="material-symbols-outlined" style="font-size: 20px;">close</span>
+                </div>
+            </div>
+            <div style="border-top : solid 1px gray; display: flex; flex-direction: row; margin-top: 10px; width: 100%;">
+                <div class="img_upload_space"
+                     style="width: 500px;
+                            height: 510px;
+                            ">
+                </div>
+                <div style="border-left: solid 1px gray;">
+                    <div>
+                         <textarea class="form-control"
+                                   id="input_feed_content"
+{#                                   id="exampleFormControlTextarea1"#}
+                                   style="width: 276px; height : 450px;" rows="5"></textarea>
+                    </div>
+                    <button id="feed_create_button"
+                            type="button"
+                            class="btn btn-light"
+                            style="width: 100%">공유하기</button>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+<!-- javascript jquery -->ㄹ
   <script>
-      
+      let files;
+
+      /* shard click */
+      $('#feed_create_button').click(function(e){
+          alert('공유하기 누름'+$('#input_feed_content').val());
+
+          let file =  files[0];
+          let image = files[0].name;
+          let content =$('#input_feed_content').val();
+          let user_id='jusuin5876';
+          let profile_image='https://pimg.mk.co.kr/meet/neds/2016/07/image_readtop_2016_509303_14685745662548570.jpeg';
+
+          let fd = new FormData();
+          fd.append("file",file);
+          fd.append("image",image);
+          fd.append("content",content);
+          fd.append("user_id",user_id);
+          fd.append("profile_image",profile_image);
+
+          //file upload use
+          $.ajax({
+                  url : "/content/upload",
+                  data : fd,
+                  method : "POST",
+                  processData : false,
+                  contentType : false,
+                  success : function(data){
+                      console.log('성공');
+                  },
+                  error : function(request,status,error){
+                            console.log('에러');
+                  },
+                  compile : function(){
+                      console.log('완료');
+                  }
+              });
+      })
+
+      $('#first_modal_close').click(function(e){
+           var id = $(this).attr("id"); // 클릭한 요소의 ID 값 가져오기
+
+           $('#first_modal').css({
+                  display: "none",
+           });
+       })
+
+      $('#second_modal_close').click(function(e){
+           var id = $(this).attr("id"); // 클릭한 요소의 ID 값 가져오기
+
+           $('#second_modal').css({
+                  display: "none",
+           });
+       })
+
       $('#nav_bar_add_box').click(function(){
+
           {# modal #}
-          $('.modal_overlay').css({
+          $('#first_modal').css({
               display : "flex",
           });
+
           {#scroll bar x#}
           $('document.body').css({
               overflow : "hidden"
           });
-          
-          
+          <!-- jquery 부분 -->
+        $('.img_upload_space')
+            .on("dragover", dragOver)
+            .on("dragleave", dragOver)
+            .on("drop", uploadFiles);
+
+        function dragOver(e){
+            e.stopPropagation();
+            e.preventDefault();
+
+            if (e.type == "dragover") {
+                $(e.target).css({
+                    "background-color": "black",
+                    "outline-offset": "-20px"
+                });
+            } else {
+                $(e.target).css({
+                    "background-color": "white",
+                    "outline-offset": "-10px"
+                });
+            }
+        }
+
+        function uploadFiles(e){
+            e.stopPropagation();
+            e.preventDefault();
+
+            e.dataTransfer = e.originalEvent.dataTransfer;
+            files =  e.dataTransfer.files;
+
+             
+            if (files.length > 1) {
+                alert('하나만 올려라.');
+                return;
+            }
+            console.log("파일을 올린듯 ?!"+files[0].name);
+            if (files[0].type.match(/image.*/)) {
+                  {# modal #}
+                  $('#first_modal').css({
+                      display : "none",
+                  });
+                  $('#second_modal').css({
+                      display : "flex",
+                  });
+
+                /*$(e.target).css({*/
+                $('.img_upload_space').css({
+                    "background-image": "url(" + window.URL.createObjectURL(files[0]) + ")",
+                    "outline": "none",
+                    "background-size": "100% 70%",
+                    "background-repeat" : "no-repeat",
+                    "background-position" : "center"
+                });
+            }else{
+                alert('이미지가 아닙니다.');
+                return;
+            }
+        }
           {#alert("add box");#}
       })
   </script>
